--- a/cloud-services-hasura/metadata/query_collections.yaml
+++ b/cloud-services-hasura/metadata/query_collections.yaml
@@ -1,1 +1,11 @@
-[]
+- name: allowed-queries
+  definition:
+    queries:
+      - name: GetAllRooms
+        query: |
+          query GetRooms {
+            rooms {
+              id
+              code
+            }
+          }
