--- a/cloud-services-hasura/metadata/query_collections.yaml
+++ b/cloud-services-hasura/metadata/query_collections.yaml
@@ -1,1 +1,25 @@
-[]
+- name: allowed-queries
+  definition:
+    queries:
+      - name: reservations
+        query: |
+          query GetReservations {
+            reservations {
+              date
+              company_id
+              id
+              length_minutes
+              room_id
+              time
+              created_at
+              updated_at
+            }
+          }
+      - name: rooms
+        query: |
+          query GetRooms {
+            rooms {
+              id
+              name
+            }
+          }
