--- a/metadata/databases/default/tables/tables.yaml
+++ b/metadata/databases/default/tables/tables.yaml
@@ -4,3 +4,4 @@
 - "!include public_reviews.yaml"
 - "!include public_rooms.yaml"
 - "!include public_users.yaml"
+- "!include public_users_roles.yaml"
