--- a/directus/.env
+++ b/directus/.env
@@ -58,7 +58,7 @@ DB_HOST="lucky-surf-559372.us-west-2.aws.neon.tech"
 DB_PORT="5432"
 DB_DATABASE="cloud-services-eshop_db"
 DB_USER="team"
-DB_PASSWORD="Hmtx3s5GkrTy"
+DB_PASSWORD="<your-password-here>"
 DB_SSL="true"
 
 
