--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,7 +1,8 @@
 - "!include public_companies.yaml"
 - "!include public_companies_rooms.yaml"
 - "!include public_invoices.yaml"
+- "!include public_messages.yaml"
 - "!include public_reviews.yaml"
-- "!include public_roles_test.yaml"
+- "!include public_roles_enum.yaml"
 - "!include public_rooms.yaml"
 - "!include public_users.yaml"
