--- a/hasura/metadata/backend_configs.yaml
+++ b/hasura/metadata/backend_configs.yaml
@@ -1,6 +1,8 @@
 dataconnector:
   athena:
     uri: http://localhost:8081/api/v1/athena
+  mariadb:
+    uri: http://localhost:8081/api/v1/mariadb
   mysql8:
     uri: http://localhost:8081/api/v1/mysql
   oracle:
