--- a/eshop/front-end/package.json
+++ b/eshop/front-end/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.13",
+    "@apollo/client": "^3.7.0-beta.8",
     "apollo-boost": "^0.4.9",
     "graphql": "^16.6.0",
     "next": "^13.3.1",
