--- a/eshop/front-end/package.json
+++ b/eshop/front-end/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0-beta.8",
+    "antd": "^5.4.6",
     "apollo-boost": "^0.4.9",
     "graphql": "^16.6.0",
     "next": "^13.3.1",
-    "react-apollo": "^3.1.5"
+    "react-apollo": "^3.1.5",
+    "react-native-websocket": "^1.0.2",
+    "subscriptions-transport-ws": "^0.11.0",
+    "websocket": "^1.0.34",
+    "ws": "^8.13.0"
   }
 }
