--- a/eshop/front-end/package.json
+++ b/eshop/front-end/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.0-beta.8",
     "antd": "^5.4.6",
     "apollo-boost": "^0.4.9",
+    "firebase": "^9.21.0",
     "graphql": "^16.6.0",
     "next": "^13.3.1",
     "react-apollo": "^3.1.5",
